feat: Add light & dark theme.

--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -2,23 +2,10 @@
 <html lang="en">
 <head>
   <title>Markdown Preview</title>
-  <style type="text/css" media="screen">
-      #__markdown_preview__ {
-          -webkit-user-select: none;
-          cursor: default;
-          position: absolute;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          left: 0;
-      }
-      code {
-          background: #959595;
-      }
-  </style>
+  <link rel="stylesheet" href="marked.css">
 </head>
 <body>
-    <div id="__markdown_preview__">
+    <div id="__markdown_preview__" class="markdown-body">
     </div>
     <script src="./marked.min.js" type="text/javascript" charset="utf-8"></script>
     <script>
