--- a/index.html
+++ b/index.html
@@ -813,9 +813,12 @@ color: #0a53c1;
       <h1 id="markdown"><a class="anchor" aria-hidden="true" tabindex="-1" href="#markdown"><span class="octicon octicon-link"></span></a>Markdown</h1>
       <p>
         <a href="https://github.com/jaywcjlove/markdown/actions/workflows/ci.yml"><img src="https://github.com/jaywcjlove/markdown/actions/workflows/ci.yml/badge.svg" alt="CI"></a>
-        <img src="https://shields.io/badge/SwiftUI-macOS%20%7C%20iOS-green?logo=Swift&#x26;style=flat" alt="">
+        <img src="https://shields.io/badge/SwiftUI-macOS%20%7C%20iOS-green?logo=Swift&#x26;style=flat" alt="SwiftUI Support">
       </p>
       <p>Render Markdown text in SwiftUI. It is a preview based on the <a href="https://github.com/markedjs/marked"><code>Marked</code></a> implementation.</p>
+      <p>
+        <img src="https://user-images.githubusercontent.com/1680273/157746319-d338670c-e4b2-471b-b524-0e9ecb8d2c52.png" alt="Markdown Package Screenshot">
+      </p>
       <h2 id="installation"><a class="anchor" aria-hidden="true" tabindex="-1" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
       <p>You can add MarkdownUI to an Xcode project by adding it as a package dependency.</p>
       <ol>
