--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@ color: #0a53c1;
       <h1 id="markdown"><a class="anchor" aria-hidden="true" tabindex="-1" href="#markdown"><span class="octicon octicon-link"></span></a>Markdown</h1>
       <p>
         <a href="https://github.com/jaywcjlove/markdown/actions/workflows/ci.yml"><img src="https://github.com/jaywcjlove/markdown/actions/workflows/ci.yml/badge.svg" alt="CI"></a>
-        <img src="https://shields.io/badge/SwiftUI-macOS%20%7C%20iOS-green?logo=Swift&#x26;style=flat" alt="SwiftUI Support">
+        <img src="https://shields.io/badge/SwiftUI-macOS%20v10.15%20%7C%20iOS%20v13-green?logo=Swift&#x26;style=flat" alt="SwiftUI Support">
       </p>
       <p>Render Markdown text in SwiftUI. It is a preview based on the <a href="https://github.com/markedjs/marked"><code>Marked</code></a> implementation.</p>
       <p>
