--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -3,12 +3,22 @@
 <head>
   <title>Markdown Preview</title>
   <link rel="stylesheet" href="marked.css">
+  <script type="text/javascript" src="./prism.js"></script>
+  <script src="./marked.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
     <div id="__markdown_preview__" class="markdown-body">
     </div>
-    <script src="./marked.min.js" type="text/javascript" charset="utf-8"></script>
     <script>
+        marked.setOptions({
+            highlight: function(code, lang) {
+                const language = Prism.languages[lang];
+                if (language) {
+                    return Prism.highlight(code, language, lang);
+                }
+                return code;
+            },
+        })
         window.__markdown_preview_dom__ = document.getElementById('__markdown_preview__');
         function markdownPreview(content) {
             __markdown_preview_dom__.innerHTML = marked.parse(content);
