fix: Fix markdown list style.

--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -18,7 +18,15 @@
                 }
                 return code;
             },
-        })
+        });
+        const renderer = {
+            listitem: (text, task, checked) => {
+                const input = typeof checked == "boolean" ? `<input type="checkbox" disabled=""${checked ? ' checked=""' : ''} class="task-list-item-checkbox">`: '';
+                const cls = typeof checked == "boolean" && typeof task === "boolean" ? 'class="task-list-item"' : ""
+                return `<li ${cls}>${input} ${(text || '').replace(/^<.*?>\s/, '')}</li>`;
+            }
+        }
+        marked.use({ renderer });
         window.__markdown_preview_dom__ = document.getElementById('__markdown_preview__');
         function markdownPreview(content) {
             __markdown_preview_dom__.innerHTML = marked.parse(content);
