--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="marked.css">
   <script type="text/javascript" src="./prism.js"></script>
   <script src="./marked.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./copy.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="__markdown_preview__" class="markdown-body"></div>
