--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -3,12 +3,14 @@
 <head>
   <title>Markdown Preview</title>
   <link rel="stylesheet" href="marked.css">
-  <script type="text/javascript" src="./prism.js"></script>
-  <script src="./marked.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./copy.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="plugin.css">
 </head>
 <body>
     <div id="__markdown_preview__" class="markdown-body"></div>
-    <script src="./main.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./prism.js"></script>
+    <script type="text/javascript" src="./plugins/lnline-color.js"></script>
+    <script type="text/javascript" src="./marked.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./copy.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
