style: Modify view style.

--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -26,7 +26,7 @@
   top: 6px;
   right: 6px;
   border-radius: 5px;
-  background: var(--color-prettylights-syntax-sublimelinter-gutter-mark);
+  background: var(--color-border-default);
   padding: 6px;
   font-size: 12px;
   transition: all .3s;
