Fix font size by set viewport

--- a/Sources/Markdown/Resources/web.bundle/index.html
+++ b/Sources/Markdown/Resources/web.bundle/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="initial-scale=1">
   <title>Markdown Preview</title>
   <link rel="stylesheet" href="marked.css">
   <link rel="stylesheet" href="katex.css">
